# zmq-client

./: .gitignore  CMakeLists.txt  README.md  build.sh  data_generated.h  zmq_pub.py
schema/: data.fbs
src/: main.cpp  publisher.cpp
stories/: user-stories.md
